syntax = "proto3";

package svc.biz.relation;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package="./svc.biz.relation;relation";

service Relation {
    rpc RelationAdd (RelationAddReq) returns (google.protobuf.Empty);
    rpc RelationDel (RelationDelReq) returns (google.protobuf.Empty);
    rpc RelationHas (RelationHasReq) returns (RelationHasResp);
    rpc GetRelationList (GetRelationListReq) returns (GetRelationListResp);
}

enum RelationType {
    RelationTypeUnknown = 0; // 未知
    RelationTypeFollow = 1; // 关注主播
    RelationTypeHistory = 2; // 观看历史
    RelationMuzzle = 3; // 禁言（当禁言为全平台禁言时，member传uuid.Nil.String()）
}

message RelationInfo {
    RelationType relation_type = 1; // 关系类型
    string member = 2; // 成员uuid
    string relation_member = 3; // 产生关系的成员uuid
    google.protobuf.Timestamp expire_at = 5; // 过期时间
    string remark = 4; // 备注
    google.protobuf.Timestamp created_at = 10;
}

message RelationAddReq {
    RelationInfo relation_info = 1;
}

message RelationDelReq {
    RelationType relation_type = 1;
    string member = 2; // 成员uuid
    string relation_member = 3; // 产生关系的成员uuid
}


message RelationHasReq {
    RelationType relation_type = 1;
    string member = 2; // 成员uuid
    string relation_member = 3; // 产生关系的成员uuid
}
message RelationHasResp {
    bool result = 1;
}

message GetRelationListReq {
    RelationType relation_type = 1;
    string member = 2; 
    int64 page = 3;
    int64 limit = 4;
}
message GetRelationListResp {
    repeated RelationInfo items = 1;
}